--- a/Pages/Admin/GenerateBills.cshtml
+++ b/Pages/Admin/GenerateBills.cshtml
@@ -329,6 +329,7 @@
             padding: 6px 12px;
             font-size: 0.8rem;
             font-weight: 600;
+            margin-left: 50px;
         }
 
         .generate-table {
