--- a/Pages/TenantDashboard.cshtml
+++ b/Pages/TenantDashboard.cshtml
@@ -22,7 +22,7 @@
                 <p class="matcha-subtitle">
                     Welcome back,
                     <span class="matcha-tenant-email">
-                        @(Model.UserInfo?.Email ?? Model.Username)
+                        @(Model.UserInfo?.Username ?? Model.Username)
                     </span>. Here's your account summary.
                 </p>
             </div>
