--- a/Pages/Admin/AdminDashboard.cshtml
+++ b/Pages/Admin/AdminDashboard.cshtml
@@ -27,7 +27,7 @@
         <section class="matcha-section mb-4">
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <article class="matcha-card h-100">
+                    <article class="matcha-card h-100"  style=" height = 0%">
                         <div class="matcha-card-body">
                             <div class="d-flex justify-content-between align-items-start">
                                 <div>
